--- a/src/drone-shooter.qrc
+++ b/src/drone-shooter.qrc
@@ -6,5 +6,10 @@
         <file>qml/modules/SignalBar/qmldir</file>
         <file>qml/modules/StandardPopup/popup.qml</file>
         <file>qml/modules/StandardPopup/qmldir</file>
+        <file>qml/modules/LegalPopup/popup.qml</file>
+        <file>qml/modules/LegalPopup/qmldir</file>
+        <file>resources/legal-notices.txt</file>
+        <file>qml/modules/File/module.js</file>
+        <file>qml/modules/File/qmldir</file>
     </qresource>
 </RCC>
