--- a/src/drone-shooter.qrc
+++ b/src/drone-shooter.qrc
@@ -13,5 +13,6 @@
         <file>qml/modules/File/qmldir</file>
         <file>qml/modules/TransmitterConfigurator/popup.qml</file>
         <file>qml/modules/TransmitterConfigurator/qmldir</file>
+        <file>qml/main.js</file>
     </qresource>
 </RCC>
