Replace product name with company logo

--- a/src/drone-shooter.qrc
+++ b/src/drone-shooter.qrc
@@ -15,5 +15,6 @@
         <file>qml/modules/TransmitterConfigurator/qmldir</file>
         <file>qml/main.js</file>
         <file>resources/icons/multiply.svg</file>
+        <file>resources/images/logo-medium.png</file>
     </qresource>
 </RCC>
